ecmascript/parser/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression5_es6/input.ts.stderr
error: Unexpected token `}`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression5_es6/input.ts:4:1
  |
4 | }
  | ^

